# geograph

./: pyproject.toml
geograph/: geograph.py
geograph/demo/: plot_settings.py
geograph/utils/: geopandas_utils.py
geograph/visualisation/: geoviewer.py
notebooks/: 1-demo-landscape-metrics-comparison-to-pylandstats.ipynb  3-demo-geographviewer-polesia.ipynb
