[tool.poetry]
name = "geograph-clone"
version = "0.1.0"
description = ""
authors = ["Alex <alexpwebber@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.13.0"
numba = "^0.59.1"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
descartes = "^1.1.0"
folium = "^0.16.0"
ipyleaflet = "^0.18.2"
jupyterlab = "^4.1.6"
tqdm = "^4.66.2"
rasterio = "^1.3.9"
fiona = "^1.9.6"
geopandas = "^0.14.3"
shapely = "^2.0.3"
pycrs = "^1.0.2"
geopy = "^2.4.1"
xarray = "^2024.3.0"
rioxarray = "^0.15.3"
dask = {extras = ["distributed"], version = "^2024.4.1"}
netcdf4 = "^1.6.5"
bottleneck = "^1.3.8"
networkx = "^3.3"
rtree = "^1.2.0"
scikit-learn = "^1.4.2"
pillow = "^10.3.0"
torch = "^2.2.2"
torchvision = "^0.17.2"
wandb = "^0.16.6"
pytorch-lightning = "^2.2.1"
segmentation-models-pytorch = {git = "https://github.com/qubvel/segmentation_models.pytorch"}
hydra-core = "^1.3.2"
pylandstats = "^2.4.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
mypy = "^1.9.0"
black = "^24.3.0"
pre-commit = "^3.7.0"
isort = "^5.13.2"
python-dotenv = "^1.0.1"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
